--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Scrim-s04sl18",
-  "description": "https://scrimba.com/frontend-path-c0j/~0122",
+  "name": "Scrim-s04t8g7",
+  "description": "https://scrimba.com/frontend-path-c0j/~0149",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.3.1",
+    "miragejs": "0.1.46",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "4.7.1",
     "react-router-dom": "6.4.3",
     "vite": "latest"
   },
